--- a/force-app/main/default/lwc/modalAlert/modalAlert.html
+++ b/force-app/main/default/lwc/modalAlert/modalAlert.html
@@ -1,6 +1,6 @@
 <template>
     <lightning-modal-header label={title}></lightning-modal-header>    
-    <lightning-modal-body>{content}</lightning-modal-body>
+    <lightning-modal-body style="text-align:center;">{content}</lightning-modal-body>
     <lightning-modal-footer>
         <lightning-button label="OK" onclick={handleOk}></lightning-button>
     </lightning-modal-footer>
