--- a/force-app/main/default/lwc/screenFlowChooser/screenFlowChooser.html
+++ b/force-app/main/default/lwc/screenFlowChooser/screenFlowChooser.html
@@ -1,3 +1,3 @@
 <template>
-    <label><button aria-label={buttonLabel} disabled={isDisabled} onclick={handleClick} class="slds-button slds-button_neutral slds-var-m-left_x-small">{buttonLabel}</button></label>
+    <lightning-button variant={variant} disabled={isDisabled} onclick={handleClick} label={buttonLabel} value={buttonLabel} class="slds-button slds-button_brand"></lightning-button>
 </template>
