--- a/force-app/main/default/lwc/screenFlowChooser/screenFlowChooser.html
+++ b/force-app/main/default/lwc/screenFlowChooser/screenFlowChooser.html
@@ -1,3 +1,3 @@
 <template>
-    <lightning-button variant={variant} disabled={isDisabled} onclick={handleClick} label={buttonLabel} value={buttonLabel} class="slds-button slds-button_brand"></lightning-button>
+    <lightning-button variant={variant} disabled={isDisabled} onclick={handleClick} label={buttonLabel} value={buttonLabel}></lightning-button>
 </template>
