--- a/force-app/main/default/lwc/chooserBank4/chooserBank4.html
+++ b/force-app/main/default/lwc/chooserBank4/chooserBank4.html
@@ -1,11 +1,11 @@
 <template>
     <div class={buttonAlignment}>
-        <c-screen-flow-chooser switcher-value={switcherValue1} switcher={switcher1} button-label={buttonLabel1} is-disabled={isDisabled1} is-finish={isFinish1} variant={variant1}></c-screen-flow-chooser>
+        <c-screen-flow-chooser switcher-value={switcherValue1} switcher={switcher1} button-label={buttonLabel1} is-disabled={isDisabled1} is-finish={isFinish1} variant={variant1} button-alignment="inline"></c-screen-flow-chooser>
         <span class="spacer"></span>
-        <c-screen-flow-chooser switcher-value={switcherValue2} switcher={switcher2} button-label={buttonLabel2} is-disabled={isDisabled2} is-finish={isFinish2} variant={variant2}></c-screen-flow-chooser>
+        <c-screen-flow-chooser switcher-value={switcherValue2} switcher={switcher2} button-label={buttonLabel2} is-disabled={isDisabled2} is-finish={isFinish2} variant={variant2} button-alignment="inline"></c-screen-flow-chooser>
         <span class="spacer"></span>
-        <c-screen-flow-chooser switcher-value={switcherValue3} switcher={switcher3} button-label={buttonLabel3} is-disabled={isDisabled3} is-finish={isFinish3} variant={variant3}></c-screen-flow-chooser>
+        <c-screen-flow-chooser switcher-value={switcherValue3} switcher={switcher3} button-label={buttonLabel3} is-disabled={isDisabled3} is-finish={isFinish3} variant={variant3} button-alignment="inline"></c-screen-flow-chooser>
         <span class="spacer"></span>
-        <c-screen-flow-chooser switcher-value={switcherValue4} switcher={switcher4} button-label={buttonLabel4} is-disabled={isDisabled4} is-finish={isFinish4} variant={variant4}></c-screen-flow-chooser>
+        <c-screen-flow-chooser switcher-value={switcherValue4} switcher={switcher4} button-label={buttonLabel4} is-disabled={isDisabled4} is-finish={isFinish4} variant={variant4} button-alignment="inline"></c-screen-flow-chooser>
     </div>
 </template>
