--- a/force-app/main/default/lwc/chooserBank3/chooserBank3.html
+++ b/force-app/main/default/lwc/chooserBank3/chooserBank3.html
@@ -1,9 +1,9 @@
 <template>
     <div class={buttonAlignment}>
-        <c-screen-flow-chooser switcher-value={switcherValue1} switcher={switcher1} button-label={buttonLabel1} is-disabled={isDisabled1} is-finish={isFinish1} variant={variant1} button-alignment="inline"></c-screen-flow-chooser>
+        <c-screen-flow-chooser switcher-value={switcherValue1} switcher={switcher1} button-label={buttonLabel1} is-disabled={isDisabled1} is-finish={isFinish1} variant={variant1} is-in-bank="true" onswitcher={handleSwitcher1} button-alignment="inline"></c-screen-flow-chooser>
         <span class="spacer"></span>
-        <c-screen-flow-chooser switcher-value={switcherValue2} switcher={switcher2} button-label={buttonLabel2} is-disabled={isDisabled2} is-finish={isFinish2} variant={variant2} button-alignment="inline"></c-screen-flow-chooser>
+        <c-screen-flow-chooser switcher-value={switcherValue2} switcher={switcher2} button-label={buttonLabel2} is-disabled={isDisabled2} is-finish={isFinish2} variant={variant2} is-in-bank="true" onswitcher={handleSwitcher2} button-alignment="inline"></c-screen-flow-chooser>
         <span class="spacer"></span>
-        <c-screen-flow-chooser switcher-value={switcherValue3} switcher={switcher3} button-label={buttonLabel3} is-disabled={isDisabled3} is-finish={isFinish3} variant={variant3} button-alignment="inline"></c-screen-flow-chooser>
+        <c-screen-flow-chooser switcher-value={switcherValue3} switcher={switcher3} button-label={buttonLabel3} is-disabled={isDisabled3} is-finish={isFinish3} variant={variant3} is-in-bank="true" onswitcher={handleSwitcher3} button-alignment="inline"></c-screen-flow-chooser>
     </div>
 </template>
