--- a/force-app/main/default/lwc/cpsIframe/cpsIframe.html
+++ b/force-app/main/default/lwc/cpsIframe/cpsIframe.html
@@ -1,3 +1,4 @@
 <template>
-    <iframe src={cpsUrl} referrerpolicy="no-referrer" sandbox="allow-forms allow-modals allow-presentation allow-same-origin allow-scripts"></iframe>    
+    <iframe src={cpsUrl} class={isFrameHiddenClass} sandbox="allow-forms allow-modals allow-presentation allow-same-origin allow-scripts"></iframe>    
+    <div class={isShowErrorMessage}>CPS IDs not set correctly.</div>
 </template>
